# lucidia-platform

./: .gitignore  AGENTS.md  README.md  index.html  requirements.txt
.github/workflows/: auto-label.yml  security-scan.yml
api/: .env.example  Dockerfile  main.py  nixpacks.toml  pyproject.toml
api/models/: __init__.py  code.py  learning.py  memory.py
api/routers/: __init__.py  billing.py  code.py  learning.py  memory.py
api/services/: __init__.py  code_analyzer.py  memory_engine.py
web/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/pricing/: page.tsx
