[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lucidia-api"
version = "0.1.0"
description = "Lucidia Platform API - AI-powered learning"
readme = "../README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "BlackRoad OS", email = "hello@blackroad.io" }
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic>=2.0.0",
    "python-multipart>=0.0.6",
    "httpx>=0.24.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "redis>=4.0.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.28.0",
    "openai>=1.0.0",
    "anthropic>=0.18.0",
    "pillow>=10.0.0",
    "numpy>=1.24.0",
    "sympy>=1.12",
    "stripe>=7.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "httpx>=0.24.0",
]

[project.scripts]
lucidia-api = "main:app"

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
